--- a/EnterpriseErp/Views/Home/Index.cshtml
+++ b/EnterpriseErp/Views/Home/Index.cshtml
@@ -10,85 +10,46 @@
             <li>
                 <span>Ventas</span>
                 <ul>
-                    <li><span>File1</span></li>
-                    <li><span>File2</span></li>
-                    <li><span>File3</span></li>
+                    <li>Clientes</li>
                 </ul>
-                </li>
-                <li>
-                    <span>Compras</span>
-                    <ul>
-                        <li><span>File1</span></li>
-                        <li><span>File2</span></li>
-                        <li><span>File3</span></li>
-                    </ul>
-                </li>
-                <li>
-                    <span>C.R.M</span>
-                    <ul>
-                        <li><span>File1</span></li>
-                        <li><span>File2</span></li>
-                        <li><span>File3</span></li>
-                    </ul>
-                </li>
-                <li>
-                    <span>Finanzas</span>
-                    <ul>
-                        <li><span>File1</span></li>
-                        <li><span>File2</span></li>
-                        <li><span>File3</span></li>
-                    </ul>
-                </li>
-                <li>
-                    <span>Sueldos y Jornales</span>
-                    <ul>
-                        <li><span>File1</span></li>
-                        <li><span>File2</span></li>
-                        <li><span>File3</span></li>
-                    </ul>
-                </li>
-                <li>
-                    <span>Contabilidad General</span>
-                    <ul>
-                        <li><span>File1</span></li>
-                        <li><span>File2</span></li>
-                        <li><span>File3</span></li>
-                    </ul>
-                </li>
-                <li>
-                    <span>Business Intelligence</span>
-                    <ul>
-                        <li><span>File1</span></li>
-                        <li><span>File2</span></li>
-                        <li><span>File3</span></li>
-                    </ul>
-                </li>
-                <li>
-                    <span>Informes</span>
-                    <ul>
-                        <li><span>File1</span></li>
-                        <li><span>File2</span></li>
-                        <li><span>File3</span></li>
-                    </ul>
-                </li>
-                <li>
-                    <span>Herramientas</span>
-                    <ul>
-                        <li><span>File1</span></li>
-                        <li><span>File2</span></li>
-                        <li><span>File3</span></li>
-                    </ul>
-                </li>
+            </li>
+            <li>
+                <span>C.R.M</span>
+                <ul>
+                    <li><span>File1</span></li>
+                </ul>
+            </li>
+            <li>
+                <span>Compras</span>
+                <ul>
+                    <li><span>File1</span></li>
+                </ul>
+            </li>
+            <li>
+                <span>Finanzas</span>
+                <ul>
+                    <li><span>File1</span></li>
+                </ul>
+            </li>
+            <li>
+                <span>Contabilidad</span>
+                <ul>
+                    <li><span>File1</span></li>
+                </ul>
+            </li>
+            <li>
+                <span>RR.HH</span>
+                <ul>
+                    <li><span>File1</span></li>
+                </ul>
+            </li>
         </ul>
     </div>
 
     <!-- Right Zone -->
-    <div data-options="region:'center'" border="false" class="easyui-tabs">
+    <div id="RightTab" data-options="region:'center'" border="false" class="easyui-tabs">
         <div title="Tab1">
-            Tab 1
-        </div>
-        <div title="Tab2">
-            Tab 2
+            <h2>Tab Principal</h2>
         </div>
     </div>
 </div>
