--- a/EnterpriseErp/Views/Home/Index.cshtml
+++ b/EnterpriseErp/Views/Home/Index.cshtml
@@ -8,48 +8,27 @@
         <!-- Tree View -->
         <ul class="easyui-tree">
             <li>
-                <span>Ventas</span>
-                <ul>
-                    <li>Clientes</li>
-                </ul>
-            </li>
-            <li>
-                <span>C.R.M</span>
-                <ul>
-                    <li><span>File1</span></li>
-                </ul>
-            </li>
-            <li>
                 <span>Compras</span>
                 <ul>
-                    <li><span>File1</span></li>
+                    <li><a class="navlink" href="#">Proveedores</a></li>
+                    <li><a class="navlink" href="#">Notas de Pedidos</a></li>
+                    <li><a class="navlink" href="#">Recepciones</a></li>
                 </ul>
             </li>
             <li>
-                <span>Finanzas</span>
+                <span>Stock</span>
                 <ul>
-                    <li><span>File1</span></li>
-                </ul>
-            </li>
-            <li>
-                <span>Contabilidad</span>
-                <ul>
-                    <li><span>File1</span></li>
-                </ul>
-            </li>
-            <li>
-                <span>RR.HH</span>
-                <ul>
-                    <li><span>File1</span></li>
+                    <li><a class="navlink" href="#">Productos</a></li>
+                    <li><a class="navlink" href="#">Listas de Precios</a></li>
                 </ul>
             </li>
         </ul>
     </div>
 
     <!-- Right Zone -->
-    <div id="RightTab" data-options="region:'center'" border="false" class="easyui-tabs">
-        <div title="Tab1">
-            <h2>Tab Principal</h2>
+    <div id="righttabs" data-options="region:'center'" border="false" class="easyui-tabs">
+        <div title="Inicio">
+            <h2>Inicio</h2>
         </div>
     </div>
 </div>
